--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -156,7 +156,13 @@
                             <constraint firstItem="Oeg-6s-x7N" firstAttribute="leading" secondItem="qH7-V4-jdE" secondAttribute="leading" constant="16" id="aA5-c9-GFT"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="UfQ-Am-QWY"/>
+                    <navigationItem key="navigationItem" id="UfQ-Am-QWY">
+                        <barButtonItem key="rightBarButtonItem" title="Launch" id="4fb-lu-KMD">
+                            <connections>
+                                <segue destination="iFx-HW-jXW" kind="show" id="byX-yE-sG1"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="descriptionLabel" destination="c18-H1-FZ3" id="Jrp-nf-kRI"/>
                         <outlet property="diameterParameterView" destination="1rH-GW-B28" id="RCo-TP-aa8"/>
@@ -170,8 +176,49 @@
             </objects>
             <point key="canvasLocation" x="1162.5954198473282" y="11.971830985915494"/>
         </scene>
+        <!--Launch-->
+        <scene sceneID="VfW-B8-jlb">
+            <objects>
+                <viewController id="iFx-HW-jXW" customClass="RocketLaunchViewController" customModule="Quanti_test" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Qnd-Py-t4i">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="i5g-cq-PdJ">
+                                <rect key="frame" x="118.66666666666667" y="361" width="155.66666666666663" height="251.33333333333337"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rocket Idle" translatesAutoresizingMaskIntoConstraints="NO" id="W2Q-1a-dfR">
+                                        <rect key="frame" x="17.333333333333336" y="0.0" width="121.33333333333331" height="202.66666666666666"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Move your phone up  to launch the rocket" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o66-2d-ZJS">
+                                        <rect key="frame" x="0.0" y="210.66666666666663" width="155.66666666666666" height="40.666666666666657"/>
+                                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="NQW-9S-8XY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="i5g-cq-PdJ" firstAttribute="centerY" secondItem="NQW-9S-8XY" secondAttribute="centerY" id="h6W-XV-Uu8"/>
+                            <constraint firstItem="i5g-cq-PdJ" firstAttribute="centerX" secondItem="NQW-9S-8XY" secondAttribute="centerX" id="sOK-fg-d9u"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Launch" id="kWo-le-aYU"/>
+                    <connections>
+                        <outlet property="descriptionLabel" destination="o66-2d-ZJS" id="0o6-Bm-0wp"/>
+                        <outlet property="rocketImageView" destination="W2Q-1a-dfR" id="Zb5-Mb-nXt"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FbE-BH-68x" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2062" y="12"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="Rocket Idle" width="121.33333587646484" height="202.66667175292969"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
