--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -87,7 +87,7 @@
                                 <rect key="frame" x="0.0" y="-8" width="393" height="826"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Oeg-6s-x7N">
-                                        <rect key="frame" x="16" y="16.000000000000028" width="361" height="506.66666666666674"/>
+                                        <rect key="frame" x="16" y="16" width="361" height="759"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jHU-mb-26O">
                                                 <rect key="frame" x="0.0" y="0.0" width="361" height="20.333333333333332"/>
@@ -162,6 +162,15 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Photos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UC1-dg-CBG">
+                                                <rect key="frame" x="0.0" y="522.66666666666663" width="361" height="20.333333333333371"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="crS-lL-vpK">
+                                                <rect key="frame" x="0.0" y="559" width="361" height="200"/>
+                                            </stackView>
                                         </subviews>
                                     </stackView>
                                 </subviews>
@@ -199,6 +208,7 @@
                         <outlet property="firstStageView" destination="mQx-Sb-xef" id="c2A-6F-Yi6"/>
                         <outlet property="heightParameterView" destination="NDV-ep-Obt" id="wRA-Hr-yKF"/>
                         <outlet property="massParameterView" destination="n6v-dW-Z2A" id="39a-0E-Rxf"/>
+                        <outlet property="photosStackView" destination="crS-lL-vpK" id="KyC-qB-HJ2"/>
                         <outlet property="secondStageView" destination="g5F-xq-KKd" id="wXd-9i-8N9"/>
                     </connections>
                 </viewController>
